--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@ body {
 }
 
 .start-animation{
-  transform: scale(0.5, 0.5) translateY(-755px);
   z-index: 200;
+  width: 500px;
+  height: 300px;
+  position: absolute;
+  top: 100px;
+  left: calc(50% - 250px);;
 }
 
-.hello{
+.header{
   height: 100vh;
   background-image: url(images/work-space.jpg);
   background-size: 150%;
@@ -17,7 +21,7 @@ body {
 }
 .paper{
   width: 500px;
-  height: 510px;
+  height: 520px;
   background-color: white;
   position: relative;
   left: calc(50% - 250px);
@@ -34,6 +38,24 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+.container{
+  width:800px;
+  margin:auto;
+  margin-top: 30px;
+  /*font-family: 'Philosopher', sans-serif;*/
+  font-family: 'El Messiri', sans-serif;
+  /*font-family: 'Comfortaa', cursive;*/
+  color:#020202;
+}
+
+
+
+
+
+
+
+
 
 .start-animation svg {
   max-width: 80%;
