--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: #fff;
+  padding: 0;
+  margin: 0;
 }
 
 .start-animation{
@@ -9,6 +11,22 @@ body {
   position: absolute;
   top: 100px;
   left: calc(50% - 250px);;
+}
+.under-animation{
+  position: absolute;
+  z-index: 199;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: white;
+  animation: white-dissapear 9s  1;
+  opacity: 0;
+}
+@keyframes white-dissapear {
+  0%   { opacity: 1; }
+  85% {opacity: 1;}
+  100% { opacity: 0; }
 }
 
 .header{
@@ -37,6 +55,18 @@ body {
   background-image: url(images/water-colour-dance.gif);
   background-size: contain;
   background-repeat: no-repeat;
+  animation: water-girl 13s;
+}
+@keyframes water-girl{
+  0% { opacity:0; }
+  90% { opacity:0; }
+  100% { opacity:1; }
+}
+
+.main-text{
+  color:#020202;
+  background-color: coral;
+  margin-top:-30px;
 }
 
 .container{
@@ -46,15 +76,28 @@ body {
   /*font-family: 'Philosopher', sans-serif;*/
   font-family: 'El Messiri', sans-serif;
   /*font-family: 'Comfortaa', cursive;*/
-  color:#020202;
+
 }
 
 
 
 
+/*-----------SVG-ANIMATION------------*/
 
-
-
+.start-animation{
+  animation-name: signature;
+  animation-duration: 7s; /* or: Xms */
+  animation-iteration-count: 1;
+  /*animation-direction: alternate;*/
+  animation-timing-function: ease; /* or: ease, ease-in, ease-in-out, linear, cubic-bezier(x1, y1, x2, y2) */
+  animation-fill-mode: forwards; /* or: backwards, both, none */
+  animation-delay: 0s; /* or: Xms */
+}
+@keyframes signature {
+  0%   { transform: scale(1.5); }
+  85%  { transform: scale(1.5); }
+  100% { transform: scale(1); }
+}
 
 
 .start-animation svg {
