--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   margin: 0;
 }
+h1, h2, h3{
+  text-align: center;
+}
 
 .start-animation{
   z-index: 200;
@@ -66,7 +69,18 @@ body {
 .main-text{
   color:#020202;
   background-color: coral;
-  margin-top:-30px;
+  padding-top: 70px;
+  padding-bottom: 50px;
+}
+.studia{
+  width: 200px;
+  float: right;
+  margin-left: 10px;
+}
+.jivo{
+  width: 200px;
+  float: right;
+  margin-left: 10px;
 }
 
 .container{
@@ -76,7 +90,48 @@ body {
   /*font-family: 'Philosopher', sans-serif;*/
   font-family: 'El Messiri', sans-serif;
   /*font-family: 'Comfortaa', cursive;*/
-
+}
+.courses{
+  margin-top:70px;
+}
+.courses h2{
+  margin-bottom: 50px;
+}
+.courses-list{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: flex-start;
+}
+.course-card{
+  display: block;
+  width: 310px;
+  height: 400px;
+  margin-bottom: 55px;
+  overflow: hidden;
+  border: 1px solid grey;
+  display: inline-block;
+}
+.course-card h3{
+  margin: 0;
+  line-height: 17px;
+  margin-bottom: 10px;
+}
+.course-about p{
+  margin: 0;
+  line-height: 19px;
+  font-size: 16px;
+}
+.course-description{
+  padding: 15px;
+}
+.course-image{
+  height: 155px;
+  overflow: hidden;
+}
+.course-image img{
+  width: 100%;
 }
 
 
@@ -94,8 +149,8 @@ body {
   animation-delay: 0s; /* or: Xms */
 }
 @keyframes signature {
-  0%   { transform: scale(1.5); }
-  85%  { transform: scale(1.5); }
+  0%   { transform: scale(2); }
+  85%  { transform: scale(2); }
   100% { transform: scale(1); }
 }
 
