--- a/style.css
+++ b/style.css
@@ -36,15 +36,7 @@ svg {
   top: 0;
   left: 0;
   background-color: white;
-/*  background-color: white;
-  animation: white-dissapear 9s  1;*/
-  /*opacity: 0;*/
 }
-/*@keyframes white-dissapear {
-  0%   { opacity: 1; }
-  85% {opacity: 1;}
-  100% { opacity: 0; }
-}*/
 
 .header{
   height: 100vh;
@@ -73,23 +65,32 @@ svg {
   background-size: contain;
   background-repeat: no-repeat;
   opacity:0;
-  /*animation: water-girl 13s;*/
 }
-/*@keyframes water-girl{
-  0% { opacity:0; }
-  90% { opacity:0; }
-  100% { opacity:1; }
-}*/
 
 
 
 /*==============seo-text section=================*/
 .main-text{
-  color:#020202;
-  background-color: coral;
-  padding-top: 70px;
-  padding-bottom: 50px;
-  z-index: 300;
+  color:white;
+  padding-bottom: 25px;
+}
+.main-text-content{
+  position: absolute;
+  z-index: 1;
+  display: block;
+  top: 0;
+  right: calc(50% - 400px);
+  margin-top: 70px;
+  margin-bottom:;
+}
+#canvas-basic {
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 .studia{
   width: 200px;
@@ -106,7 +107,8 @@ svg {
 
 /*============== courses-section ===============*/
 .courses{
-  margin-top:70px;
+  margin-top:-30px;
+  padding-top: 50px;
   background-color: lightgrey;
 }
 .courses h2{
@@ -131,7 +133,7 @@ svg {
   display: inline-block;
   opacity:0;
   transform: scale(0.87);
-  transition: all 0.35s ease-in-out;
+  transition: all 0.25s ease-in-out;
   cursor: pointer;
 }
 .course-card.fade-in{
@@ -162,18 +164,20 @@ svg {
 .course-image img{
   width: 100%;
   transform: scale(1.13);
-  transition: all 0.5s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 .course-card:hover img{
   transform: scale(1);
 }
 .course-card:hover{
-  transition: all 0.5s ease-in-out;
+  transition: all 0.25s ease-in-out;
   transform: scale(1.05);
   -webkit-box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
 }
+
+
 
 
 
@@ -193,6 +197,9 @@ svg {
   100% { transform: scale(1); }
 }*/
 
+.start-animation{
+  transform: scale(2.5);
+}
 
 .start-animation svg {
   max-width: 80%;
@@ -203,7 +210,7 @@ svg {
   right: 0;
   bottom: 0;
   margin: auto;
-  top:100px;
+  top:70px;
   z-index: 200;
   opacity: 0.55;
 }
