--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ h1, h2, h3{
 
 .start-animation{
   z-index: 200;
-  width: 500px;
+  width: 460px;
   height: 300px;
   position: absolute;
-  top: 100px;
-  left: calc(50% - 250px);;
+  top: 70px;
+  left: calc(50% - 230px);;
 }
 svg {
   z-index: 1;
@@ -41,18 +41,18 @@ svg {
 .header{
   height: 100vh;
   background-image: url(images/work-space.jpg);
-  background-size: 150%;
-  background-position: center;
+  background-size: 100%;
+  background-position: bottom;
   text-align: center;
   overflow: hidden;
 }
 .paper{
-  width: 500px;
-  height: 520px;
+  width: 360px;
+  height: 550px;
   background-color: white;
   position: relative;
-  left: calc(50% - 250px);
-  top: 102px;
+  left: calc(50% - 180px);
+  top: 60px;
   box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.55);
 }
 .water-colour-gif{
@@ -178,6 +178,13 @@ svg {
 }
 
 
+
+
+
+.find-us{
+  width: 100%;
+  height: 700px;
+}
 
 
 
