--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ svg {
 .main-text{
   color:white;
   padding-bottom: 25px;
+  height: 2000px;
+}
+.main-text h2{
+  padding-
 }
 .main-text-content{
   position: absolute;
@@ -80,27 +84,88 @@ svg {
   display: block;
   top: 0;
   right: calc(50% - 400px);
-  margin-top: 70px;
-  margin-bottom:;
+  margin-top: 40px;
+  margin-bottom:10px;
 }
 #canvas-basic {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 2000px!important;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
 }
-.studia{
-  width: 200px;
-  float: right;
-  margin-left: 10px;
+.main-block-1{
+  display: block;
+  position: absolute;
+  background-color: rgba(0,0,0,0.55);
+  width: 400px;
+  padding: 15px;
+  top: 120px;
+  left: 0px;
+  line-height: 0.85rem;
+  font-size: 14px;
+  z-index: 10;
 }
-.jivo{
-  width: 200px;
-  float: right;
-  margin-left: 10px;
+.main-block-2{
+  display: block;
+  position: absolute;
+  background-color: rgba(0,0,0,0.55);
+  width: 500px;
+  padding: 15px;
+  top: 550px;
+  right: 0px;
+  line-height: 0.85rem;
+  font-size: 14px;
+}
+.main-block-3{
+  display: block;
+  position: absolute;
+  background-color: rgba(0,0,0,0.55);
+  width: 500px;
+  padding: 15px;
+  top: 990px;
+  left: 0px;
+  line-height: 0.85rem;
+  font-size: 14px;
+}
+.main-block-4{
+  display: block;
+  position: absolute;
+  background-color: rgba(0,0,0,0.55);
+  width: 500px;
+  padding: 15px;
+  top: 1290px;
+  right: 0px;
+  line-height: 0.85rem;
+  font-size: 14px;
+}
+.main-img-1{
+  display: block;
+  position: absolute;
+  background-color: rgba(0,0,0,0.3);
+  width: 450px;
+  padding: 15px;
+  top: 140px;
+  right: -20px;
+}
+.main-img-2{
+  display: block;
+  position: absolute;
+  background-color: rgba(0,0,0,0.3);
+  width: 250px;
+  padding: 15px;
+  top: 340px;
+  right: 30px;
+}
+
+.main-img-1 img,
+.main-img-2 img,
+.main-img-3 img,
+.main-img-4 img,
+.main-img-5 img{
+  width: 100%;
 }
 
 
@@ -109,8 +174,8 @@ svg {
 .courses{
   margin-top:-30px;
   padding-top: 50px;
-  background-color: lightgrey;
-}
+  background-color: lightgrey;}
+
 .courses h2{
   margin-bottom: 50px;
 }
@@ -120,6 +185,7 @@ svg {
   flex-wrap: wrap;
   align-items: center;
   align-content: flex-start;
+  margin-bottom: 30px;
 }
 .course-card{
   display: block;
@@ -177,32 +243,75 @@ svg {
   box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
 }
 
+ /*================TEACHERS============*/
+ .teachers{
+  display: block;
+  height: 100vh;
+  border-bottom: 2px solid grey;
+  background-color: yellow;
+ }
 
 
 
+/*============find us section===========*/
 
 .find-us{
   width: 100%;
   height: 700px;
+  text-align: center;
+  margin-top: -70px;
+}
+.ways-to-studio{
+  display: flex;
+  justify-content: space-around;
+}
+.way{
+  width:320px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 3px solid white;
+  padding: 15px;
+  padding-top: 0px;
+}
+.find-us p{
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 3px solid white;
+}
+.find-us h2{
+
+}
+
+
+/*graph-styled-backgrounds*/
+
+canvas.particles-js-canvas-el {
+  display: block;
+  vertical-align: bottom;
+}
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+}
+.find-us .container{
+  position: absolute;
+  z-index: 1;
+  display: block;
+  right: calc(50% - 400px);
+}
+.find-us .for-map{
+  position: absolute;
+  z-index: 1;
+  display: block;
+  width: 100%;
+  top: 505px;
 }
 
 
 
 /*-----------SVG-ANIMATION------------*/
 
-/*.start-animation{
-  animation-name: signature;
-  animation-duration: 7s; 
-  animation-iteration-count: 1;
-  animation-timing-function: ease;  or: ease, ease-in, ease-in-out, linear, cubic-bezier(x1, y1, x2, y2) 
-  animation-fill-mode: forwards; 
-  animation-delay: 0s; 
-}
-@keyframes signature {
-  0%   { transform: scale(2); }
-  85%  { transform: scale(2); }
-  100% { transform: scale(1); }
-}*/
 
 .start-animation{
   transform: scale(2.5);
