--- a/style.css
+++ b/style.css
@@ -152,9 +152,9 @@ svg {
   left: -30px;
 }
 .main-img-4{
-  width: 150px;
+  width:200px;
   padding: 5px;
-  top: 755px;
+  top: 735px;
   left: -5px;
 }
 .main-img-5{
@@ -204,9 +204,9 @@ svg {
 /*============== courses-section ===============*/
 .courses{
   margin-top:-30px;
-  padding-top: 50px;
-  background-color: lightgrey;}
-
+  padding-top: 30px;
+  background-color: #EDEDED;
+}
 .courses h2{
   margin-bottom: 50px;
 }
@@ -222,6 +222,7 @@ svg {
   display: block;
   width: 310px;
   height: 400px;
+  /*cursor: pointer;*/
   margin-bottom: 55px;
   background-color: white;
   overflow: hidden;
@@ -229,9 +230,10 @@ svg {
   border-radius: 5px;
   display: inline-block;
   opacity:0;
-  transform: scale(0.87);
-  transition: all 0.25s ease-in-out;
-  cursor: pointer;
+  box-shadow: 0px 0px 16px -4px rgba(0,0,0,0.75)
+/*  transform: scale(0.87);
+  transition: all 0.3s ease-in-out;*/
+
 }
 .course-card.fade-in{
   opacity:1;
@@ -261,26 +263,116 @@ svg {
 .course-image img{
   width: 100%;
   transform: scale(1.13);
-  transition: all 0.25s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .course-card:hover img{
-  transform: scale(1);
+  /*transform: scale(1);*/
 }
 .course-card:hover{
-  transition: all 0.25s ease-in-out;
-  transform: scale(1.05);
-  -webkit-box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
+  /*transition: all 0.3s ease-in-out;*/
+  /*transform: scale(1.05);*/
+/*  -webkit-box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 34px -4px rgba(0,0,0,0.75);*/
 }
 
  /*================TEACHERS============*/
- .teachers{
+.teachers{
   display: block;
-  height: 100vh;
+  /*height: 100vh;*/
+  height: 777px;
   border-bottom: 2px solid grey;
-  background-color: yellow;
+  /*background-color: coral;*/
  }
+ .balls{
+  position: absolute;
+  height: 400px;
+  width: 1000px;
+  top: -70px;
+  left: calc(50% - 450px);
+}
+.teachers h2{
+  margin-top: 20px;
+}
+.teachers .container{
+  z-index: 10;
+  margin-top: -30px;
+  padding-top: 15px;
+
+} 
+.teacher-photo{
+  height:400px;
+  width: 100%;
+  position: absolute;
+  top: 100px;
+  left: calc(50% - 400px);
+  /*background-image: url(images/girls-up-1.png);*/
+  /*background-position: bottom;*/
+  /*background-repeat: no-repeat;*/
+  z-index: 10;
+  transition: all 0.55s ease-out;
+  max-width: 800px
+ }
+ .teacher-photo.photo-down{
+    opacity: 1;
+ }
+ .teacher-photo.photo-down.hidden{
+    opacity: 0;
+ }
+  .teacher-photo.photo-up{
+    opacity: 0;
+ }
+ .teacher-photo.photo-up.active{
+    opacity: 1;
+ }
+ .teachers .description{
+  background-color: grey;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  top: 494px;
+  border-radius: 10px;
+  z-index: 10;
+ }
+ .teacher .name{
+  position: absolute;
+  font-size: 1.1rem;
+  padding: 1px 10px 1px 10px;
+  top: -15px;
+  background-color: white;
+  min-width: 70px;
+  text-align: center;
+  border: 2px solid darkgrey;
+  border-radius: 5px;
+ }
+ .teacher.natasha .name{
+  left: 75px;
+ }
+  .teacher.nastya .name{
+  left: 345px;
+ }
+  .teacher.yana .name{
+  left: 600px;
+ }
+ .teachers .description .teacher{
+  width: 220px;
+  padding: 10px;
+  margin: 10px;
+  background-color: lightgrey;
+  border-radius: 5px;
+  font-size: 0.77rem
+ }
+.ball {
+  position: absolute;
+  border-radius: 100%;
+  opacity: 0.7;
+  z-index: 1;
+}
+
+
+
+
+
 
 
 
@@ -290,7 +382,9 @@ svg {
   width: 100%;
   height: 700px;
   text-align: center;
-  margin-top: -70px;
+  display: block; 
+  background-color: red!important;
+  /*ВКЛЮЧИТЬ ТУТ*/
 }
 .ways-to-studio{
   display: flex;
@@ -315,10 +409,10 @@ svg {
 
 /*graph-styled-backgrounds*/
 
-canvas.particles-js-canvas-el {
+/*canvas.particles-js-canvas-el {
   display: block;
   vertical-align: bottom;
-}
+}*/
 #particles-js {
   position: absolute;
   width: 100%;
