--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,26 @@ h1, h2, h3{
   text-align: center;
 }
 .container{
-  width:800px;
+  width:1200px;
   margin:auto;
   margin-top: 30px;
   font-family: 'El Messiri', sans-serif;
+}
+@media screen and (max-width: 1400px) { 
+  .container{
+    width:800px;
+  }
 }
 
 /*===========intro section============*/
 
 .start-animation{
   z-index: 200;
-  width: 460px;
-  height: 300px;
+  width: 700px;
+  height: 500px;
   position: absolute;
-  top: 70px;
-  left: calc(50% - 230px);;
+  top: 150px;
+  left: calc(50% - 350px);;
 }
 svg {
   z-index: 1;
@@ -39,32 +44,57 @@ svg {
 .header{
   height: 100vh;
   background-image: url(../images/work-space.jpg);
-  background-size: 100%;
+  background-size: 110%;
   background-position: bottom;
   text-align: center;
   overflow: hidden;
 }
 .paper{
-  width: 360px;
-  height: 550px;
+  width: 555px;
+  height: 770px;
   background-color: white;
   position: absolute;
-  left: calc(50% - 180px);
+  left: calc(50% - 277px);
   top: 150px;
   box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.55);
   z-index: 20;
 }
 .water-colour-gif{
-  height: 250px;
-  width: 300px;
+  height: 350px;
+  width: 420px;
   position: relative;
-  left: calc(50% - 150px);
-  top: 270px;
+  left: calc(50% - 210px);
+  top: 380px;
   background-image: url(../images/water-colour-dance.gif);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   opacity:0;
+}
+@media screen and (max-width: 1400px) {
+  .header{
+    background-size: 100%;
+  }
+  .paper{
+    top: 70px;
+    width: 360px;
+    height: 550px;
+    left: calc(50% - 180px);
+  }
+  .start-animation{
+    width: 460px;
+    height: 300px;
+    top: 55px;
+    left: calc(50% - 230px);;
+  }
+  .water-colour-gif{
+    height: 250px;
+    width: 300px;
+    left: calc(50% - 150px);
+    top: 250px;
+    opacity:0;
+  }
+
 }
 
 
@@ -73,7 +103,7 @@ svg {
 .main-text{
   color:white;
   padding-bottom: 25px;
-  height: 1650px;
+  height: 1950px;
 }
 .main-text h2{
   
@@ -83,26 +113,23 @@ svg {
   z-index: 1;
   display: block;
   top: 0;
-  right: calc(50% - 400px);
+  right: calc(50% - 600px);
   margin-top: 40px;
   margin-bottom:10px;
 }
 #canvas-basic {
   display: block;
   width: 100%;
-  height: 1650px!important;
+  height: 1950px;
   margin-top: -1px;
-
 }
 
 /*offset to left for 30px*/
 .main-block-1{
-  width: 400px;
+  width: 630px;
   padding: 15px;
   top: 120px;
   left: -40px;
-  line-height: 0.85rem;
-  font-size: 14px;
   z-index: 10;
 }
 .main-block-2{
@@ -110,29 +137,23 @@ svg {
   padding: 15px;
   top: 505px;
   right: 30px;
-  line-height: 0.85rem;
-  font-size: 14px;
   z-index: 11;
 }
 .main-block-3{
-  width: 555px;
+  width: 700px;
   padding: 15px;
-  top: 1010px;
-  left: -50px;
-  line-height: 0.85rem;
-  font-size: 14px;
+  top: 810px;
+  left: -150px;
   z-index: 12;
 }
 .main-block-4{
-  width: 650px;
+  width: 670px;
   padding: 15px;
-  top: 1350px;
-  right: 100px;
-  line-height: 0.85rem;
-  font-size: 14px;
+  top: 1450px;
+  right: 120px;
 }
 .main-img-1{
-  width: 450px;
+  width: 530px;
   padding: 10px;
   top: 140px;
   right: 10px;
@@ -150,22 +171,22 @@ svg {
   left: -30px;
 }
 .main-img-4{
-  width:200px;
-  padding: 5px;
-  top: 735px;
-  left: -5px;
+  width:300px;
+  padding: 7px;
+  top: 655px;
+  left: 305px;
 }
 .main-img-5{
   width: 700px;
   padding: 10px;
-  top: 888px;
-  left: 25px;
+  top: 1248px;
+  right: 5px;
 }
 .main-img-6{
-  width: 200px;
+  width: 220px;
   padding: 10px;
-  top: 1100px;
-  right: 15px;
+  top: 1420px;
+  left: 100px;
 }
 
 .main-block-1,
@@ -175,6 +196,7 @@ svg {
   display: block;
   position: absolute;
   background-color: rgba(0,0,0,0.55);
+  font-size: 16px;
 }
 
 .main-img-1,
@@ -195,6 +217,89 @@ svg {
 .main-img-5 img,
 .main-img-6 img{
   width: 100%;
+}
+
+@media screen and (max-width: 1400px) { 
+  .main-text-content{
+    right: calc(50% - 400px);
+  }
+  .main-block-1,
+  .main-block-2,
+  .main-block-3,
+  .main-block-4{
+    font-size: 14px;
+  }
+  .main-block-1{
+    width: 400px;
+    padding: 15px;
+    top: 120px;
+    left: -40px;
+    line-height: 0.85rem;
+  }
+  .main-block-2{
+    width: 500px;
+    padding: 15px;
+    top: 505px;
+    right: 30px;
+    line-height: 0.85rem;
+  }
+  .main-block-3{
+    width: 555px;
+    padding: 15px;
+    top: 1010px;
+    left: -50px;
+    line-height: 0.85rem;
+  }
+  .main-block-4{
+    width: 650px;
+    padding: 15px;
+    top: 1350px;
+    right: 100px;
+  }
+  .main-img-1{
+    width: 450px;
+    padding: 10px;
+    top: 140px;
+    right: 10px;
+  }
+  .main-img-2{
+    width: 200px;
+    padding: 10px;
+    top: 330px;
+    right: 60px;
+  }
+  .main-img-3{
+    width: 300px;
+    padding: 10px;
+    top: 530px;
+    left: -30px;
+  }
+  .main-img-4{
+    width:200px;
+    padding: 5px;
+    top: 735px;
+    left: -5px;
+  }
+  .main-img-5{
+    width: 700px;
+    padding: 10px;
+    top: 888px;
+    left: 25px;
+  }
+  .main-img-6{
+    width: 200px;
+    padding: 10px;
+    top: 1100px;
+    right: 15px;
+    left: auto;
+  }
+  .main-text{
+    height: 1750px;
+  }
+  #canvas-basic {
+    height: 1750px;
+  }
+
 }
 
 
@@ -330,6 +435,7 @@ svg {
   top: 494px;
   border-radius: 10px;
   z-index: 10;
+  left: calc(50% - 390px);
  }
  .teacher .name{
   position: absolute;
@@ -367,14 +473,16 @@ svg {
 }
 
 
-
 /*----------------------OUR STUDENTS section*/
 
 .our-students{
-  height: 800px;
+  height: 1200px;
   /*background-color: coral;*/
   background-image: url(../images/purple-wood.jpg);
   background-repeat: repeat;
+}
+.our-students h2{
+  color: white;
 }
 .our-students .container{
   padding-top: 25px;
@@ -384,8 +492,11 @@ svg {
   cursor: pointer;
   max-height: 180px;
 }
-
-
+@media screen and (max-width: 1400px) { 
+  .our-students{
+    height: 800px;
+  }
+}
 
 
 
@@ -394,13 +505,16 @@ svg {
 
 .find-us{
   width: 100%;
-  height: 700px;
+  height: 900px;
   text-align: center;
   display: block; 
+  position: absolute;
+  background: #ffffff;
   /*ВКЛЮЧИТЬ ТУТ*/
 }
 .find-us h4{
   margin-top: 5px;
+  margin-bottom: 5px;
 }
 .find-us .adress{
   margin-bottom: 5px;
@@ -424,33 +538,43 @@ svg {
 .find-us .phone{
   font-size: 1.5rem;
 }
-
-
-/*graph-styled-backgrounds*/
-
-/*canvas.particles-js-canvas-el {
-  display: block;
-  vertical-align: bottom;
-}*/
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #ffffff;
-}
 .find-us .container{
   position: absolute;
   z-index: 1;
   display: block;
-  right: calc(50% - 400px);
+  right: calc(50% - 600px);
 }
 .find-us .for-map{
   position: absolute;
   z-index: 1;
   display: block;
   width: 100%;
-  top: 525px;
+  top: 500px;
 }
+.find-us .unp{
+  position:absolute;
+  left: calc(50% - 120px);
+  bottom: 30px;
+  z-index: 22;
+}
+
+@media screen and (max-width: 1400px) { 
+  .find-us .container{
+    right: calc(50% - 400px);
+  }
+  .find-us .unp{
+    bottom: 20px;
+  }
+
+}
+
+
+
+
+
+
+
+
 
 
 
