--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ svg {
     background-size: 100%;
   }
   .paper{
-    top: 70px;
+    top: 100px;
     width: 360px;
     height: 550px;
     left: calc(50% - 180px);
@@ -464,7 +464,8 @@ svg {
 }
 .course-card h2{
   margin: 0;
-  line-height: 17px;
+  line-height: 15px;
+  font-size: 1rem;
   margin-bottom: 10px;
 }
 .course-description{
