--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,7 @@ nav .menu{
 
 /*============== courses-section ===============*/
 .courses{
-  margin-top:-30px;
+  /*margin-top:-30px;*/
   /*padding-top: 30px;*/
   /*background-color: #EDEDED;*/
   background-image: url(../images/oboi-3.jpg);
@@ -604,6 +604,7 @@ nav .menu{
 }
 .courses .container{
   padding-top: 20px;
+  margin-top: 0;
 }
 .courses h1{
   margin-bottom: 50px;
