--- a/css/style.css
+++ b/css/style.css
@@ -338,10 +338,139 @@ nav .menu{
 .menu-bt.call-us .circle{
   background-color: blue;
 }
+
 @media screen and (max-width: 640px) { 
   nav .menu{
+    /*display: none;*/
+    right: auto;
+    width: 120%;
+    height: 160px;
+    border-radius: 110% 80%;
+    /* right: 0; */
+    left: -10%;
+    bottom: -170px;
+    /*bottom: -70px;*/
+    box-shadow: 0px -7px 10px -6px rgba(0,0,0,0.65);
+  }
+  .menu-btn{
+    flex-direction: column;
+  }
+  .menu-btn .circle{
+    height: 25px;
+    width: 25px;
+    background-size: contain;
+  }
+  .menu-btn .txt {
+    padding-top: 15px;
+    font-size: 0.8rem;
+  }
+
+  .menu-btn:hover .txt{
+    font-size: 0.8rem;
+    font-weight: normal;
+  }
+  .menu-btn.activated .txt{
+    font-size: 0.85rem;
+    font-weight: bold! important;
+    /*padding-top: ;*/
+    transform: translateX(0) translateY(0);
+  }
+
+  .menu-btn.animated-logo{
     display: none;
   }
+  .menu-btn.courses-prices{
+    left: 7%;
+    bottom: 70px;
+    z-index: 111;
+    background-image: url(../images/m-blob-red.png);
+    background-position: top;
+  }
+  .menu-btn.courses-prices .txt{
+    padding-top: 7px;
+  }
+  .menu-btn.activated.courses-prices .txt{
+    padding-top: 7px;
+    color: black;
+  }
+
+  .menu-btn.about-us{
+    left: 20%;
+    bottom: 80px;
+    background-image: url(../images/m-blob-green.png);
+    background-position: top;
+  }
+  .menu-btn.activated.about-us .txt{
+    color: black;
+  }
+
+  .menu-btn.super-teachers{
+    left: 30%;
+    bottom: 85px;
+    background-image: url(../images/m-blob-yellow.png);
+    background-position: top;
+  }
+
+  .menu-btn.students-work{
+    left: 42%;
+    bottom: 95px;
+    background-image: url(../images/m-blob-white.png);
+    background-position: top;
+  }
+  .menu-btn.students-work .txt{
+    color: black;
+  }
+  .menu-btn.contacts{
+    left: 55%;
+    bottom: 90px;
+    background-image: url(../images/m-blob-blue.png);
+    background-position: top;
+  }
+  .menu-bt.call-us{
+    left: 75%;
+    bottom: 83px;
+    display: flex;
+    flex-direction: column;
+  }
+  .menu-bt.call-us .circle-mob{
+    display: block;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    /*background-color: green;*/
+    background-image: url(../images/call-us.png);
+    box-shadow: -1px -3px 17px -2px rgba(0,0,0,0.65);
+  }
+  .menu-bt.call-us .txt{
+    display: none;
+  }
+  .menu-btn.activated.contacts .txt{
+      color: black;
+      transform: translateX(0) translateY(0);
+      font-weight: bold;
+  }
+  .menu-btn.activated.courses-prices{
+    background-image: url(../images/m-blob-red-plus.png);
+    background-position: top;
+  }
+  .menu-btn.activated.about-us{
+    background-image: url(../images/m-blob-green-plus.png);
+    background-position: top;
+  }
+  .menu-btn.activated.super-teachers{
+    background-image: url(../images/m-blob-yellow-plus.png);
+    background-position: top;
+  }
+  .menu-btn.activated.students-work{
+    background-image: url(../images/m-blob-white-plus.png);
+    background-position: top;
+  }
+  .menu-btn.activated.contacts{
+    background-image: url(../images/m-blob-blue-plus.png);
+    background-position: top;
+  }
+
+
 }
 
 
@@ -555,6 +684,12 @@ nav .menu{
   #canvas-basic{
     height: 2750px;
   }
+  #canvas-basic{
+    margin-top: 0;
+  }
+  .courses-list{
+    margin-bottom: 0!important;
+  }
   .main-text-content{
     width: 90%;
     right: 5%;
@@ -681,7 +816,7 @@ nav .menu{
   border-radius: 5px;
   display: inline-block;
   opacity:0;
-  box-shadow: 0px 0px 16px -4px rgba(0,0,0,0.75)
+  box-shadow: 0px 0px 16px -4px rgba(0,0,0,0.75);
   transform: scale(0.87) translateY(-20px);
   transition: all 0.3s ease-in-out;
 
