--- a/css/style.css
+++ b/css/style.css
@@ -57,17 +57,6 @@ svg {
   text-align: center;
   overflow: hidden;
 }
-.header-programm{
-  height: 100vh;
-  background-image: url(../images/work-space.jpg);
-  background-size: 150%;
-  background-position: bottom;
-}
-.header-programm .container{
-  background-color: white;
-  margin-top: 0!important;
-  padding: 20px;
-}
 .paper{
   width: 555px;
   height: 770px;
@@ -142,6 +131,88 @@ svg {
 
 }
 
+/*==========TABLES===========*/
+
+
+.header-programm{
+  /*height: 100vh;*/
+  background-image: url(../images/work-space.jpg);
+  background-size: 150%;
+  background-position: bottom;
+  background-attachment: fixed;
+}
+.header-programm .container{
+  background-color: white;
+  /*position: absolute;*/
+  margin-top: 0!important;
+  padding: 20px;
+}
+.main-page-btn{
+  position: fixed;
+  right: 7vw;
+  top: 7vw;
+  height: 10vw;
+  width: 10vw;
+  border-radius: 50%;
+  background-image: url('../images/drevo.jpg');
+  transform: translateZ(0px);
+  -webkit-box-shadow: -8px 6px 29px -6px rgba(0,0,0,0.75);
+  -moz-box-shadow: -8px 6px 29px -6px rgba(0,0,0,0.75);
+  box-shadow: -8px 6px 29px -6px rgba(0,0,0,0.75);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.main-page-btn:hover{
+  transform: scale(1.1);
+}
+.main-page-btn .btn-text{
+  /*display: inline-block;*/
+  text-align: center;
+  font-family: 'El Messiri', sans-serif;
+  font-weight: bold;
+  line-height: 1rem;
+  width:7vw;
+  height: 5vw;
+  text-decoration: none;
+  color: black;
+  padding-top: 15px;
+}
+.table td{
+  padding: 10px;
+}
+@media screen and (max-width: 640px) and (orientation:portrait) {
+  .main-page-btn{
+    height: 23vw;
+    width: 23vw;
+  }
+  .main-page-btn .btn-text{
+    width:17vw;
+    height: 17vw;
+    font-size: 0.7rem;
+    line-height: 0.9rem;
+    padding-top: 10px;
+  }
+}
+
+@media screen and (max-width: 800px) and (orientation:landscape) {
+  .main-page-btn{
+    height: 15vw;
+    width: 15vw;
+    right:2vw;
+    top: 2vw;
+  }
+  .main-page-btn .btn-text{
+    width:10vw;
+    height: 10vw;
+    font-size: 0.8rem;
+    line-height: 0.9rem;
+    padding-top: 10px;
+  }
+}
+
 
 /*================menu section===================*/
 
@@ -152,14 +223,11 @@ nav .menu{
 /*  height: 555px;
   width: 180px;
   border-radius: 30px 0 0 30px;*/
-
   width: 370px;
   height: 555px;
   /*-webkit-border-radius: 63px 63px 63px 63px / 108px 108px 72px 72px;*/
   border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-
   /*right: -380px;*/
-
   border: 1px solid #D0B293;
   box-shadow: ;
   right: -170px;
@@ -819,6 +887,10 @@ nav .menu{
   align-items: center;
   align-content: flex-start;
   margin-bottom: 30px;
+}
+.courses-list a{
+  text-decoration: none;
+  color: black;
 }
 .course-card{
   display: block;
