--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,9 @@ h1, h2, h3{
 .start-animation{
   z-index: 200;
   width: 700px;
-  height: 500px;
+  height: 30%;
   position: absolute;
-  top: 150px;
+  top: 20%;
   left: calc(50% - 350px);
   /*transform: scale(2.5);*/
 }
@@ -59,27 +59,27 @@ svg {
 }
 .paper{
   width: 555px;
-  height: 770px;
+  height: 85%;
   background-color: white;
   position: absolute;
   left: calc(50% - 277px);
-  top: 150px;
+  top: 12%;
   box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.55);
   z-index: 20;
 }
 .water-colour-gif{
-  height: 350px;
+  height: 40%;
   width: 420px;
   position: relative;
   left: calc(50% - 210px);
-  top: 380px;
+  top: 50%;
   background-image: url(../images/water-colour-dance.gif);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   /*opacity:0;*/
 }
-@media screen and (max-width: 1400px) {
+/*@media screen and (max-width: 1400px) {
   .header{
     background-size: 100%;
   }
@@ -101,7 +101,7 @@ svg {
     left: calc(50% - 150px);
     top: 250px;
   }
-}
+}*/
 
 @media screen and (max-width: 640px) { 
   .header{
@@ -112,21 +112,21 @@ svg {
   .start-animation{
     width: 360px;
     height: 250px;
-    top: 75px;
+    top: 0;
     left: calc(50% - 180px);
     /*transform: scale(1.3);*/
   }
   .paper{
-    top: 20%;
+    top: 10%;
     width: 80%;
-    height: 77%;
+    height: 87%;
     left: 10%;
   }
   .water-colour-gif{
     height: 45%;
     width: 70%;
     left: 15%;
-    top: 35%;
+    top: 45%;
   }
 
 }
